--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,15 @@ const lang = getLangFromUrl(Astro.url);
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon_io/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon_io/apple-touch-icon.png" />
+    <link rel="manifest" href="/images/favicon_io/site.webmanifest" />
+    <link rel="shortcut icon" href="/images/favicon_io/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+
     <meta name="generator" content={Astro.generator} />
     <title>{title} | Ordo</title>
     <meta name="description" content={description} />
