--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,7 +7,7 @@ const t = useTranslations(lang);
 const navItems = [
   { name: t('nav.features'), href: "#features" },
   { name: t('nav.benchmarks'), href: "#benchmarks" },
-  { name: t('nav.docs'), href: "https://github.com/Pama-Lee/Ordo#readme" },
+  { name: t('nav.docs'), href: "https://docs.ordoengine.com" },
   { name: t('nav.playground'), href: "https://pama-lee.github.io/Ordo/" },
 ];
 
