--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,12 @@ import Navbar from '../components/Navbar.astro';
 import Hero from '../components/Hero.astro';
 import PerformanceShowcase from '../components/PerformanceShowcase.astro';
 import Features from '../components/Features.astro';
+import QuickStart from '../components/QuickStart.astro';
+import ExpressionSyntax from '../components/ExpressionSyntax.astro';
 import IntegrationShowcase from '../components/IntegrationShowcase.astro';
 import CodeShowcase from '../components/CodeShowcase.astro';
 import EditorPreview from '../components/EditorPreview.astro';
+import Roadmap from '../components/Roadmap.astro';
 import CTA from '../components/CTA.astro';
 import Footer from '../components/Footer.astro';
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
@@ -17,13 +20,16 @@ const t = useTranslations(lang);
 
 <Layout title={`Ordo - ${t('hero.title_part2')}`}>
 	<Navbar />
-	<main class="flex-grow">
+	<main class="grow">
 		<Hero />
 		<PerformanceShowcase />
 		<Features />
+		<QuickStart />
+		<ExpressionSyntax />
 		<IntegrationShowcase />
 		<CodeShowcase />
 		<EditorPreview />
+		<Roadmap />
 		<CTA />
 	</main>
 	<Footer />
