--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
 import Hero from '../components/Hero.astro';
+import FlowDiagram from '../components/FlowDiagram.astro';
 import PerformanceShowcase from '../components/PerformanceShowcase.astro';
 import Features from '../components/Features.astro';
 import QuickStart from '../components/QuickStart.astro';
@@ -22,6 +23,7 @@ const t = useTranslations(lang);
 	<Navbar />
 	<main class="grow">
 		<Hero />
+		<FlowDiagram />
 		<Features />
 		<EditorPreview />
 		<CodeShowcase />
