--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,9 +8,9 @@ const t = useTranslations(lang);
 <div class="relative overflow-hidden pt-20 pb-16 lg:pt-32 lg:pb-24">
   {/* Background Decoration */}
   <div class="absolute inset-0 -z-10 overflow-hidden">
-    <div class="absolute top-0 left-1/2 -translate-x-1/2 w-[1000px] h-[600px] bg-brand/10 blur-[120px] rounded-full opacity-50"></div>
-    <div class="absolute top-1/4 right-0 w-[400px] h-[400px] bg-accent/10 blur-[100px] rounded-full opacity-30"></div>
-    <div class="absolute inset-0 bg-[url('/images/grid.svg')] bg-center [mask-image:linear-gradient(180deg,white,rgba(255,255,255,0))] opacity-20"></div>
+    <div class="absolute top-0 left-1/2 -translate-x-1/2 w-[1000px] h-[600px] rounded-full opacity-60" style="background: radial-gradient(circle, rgba(249, 115, 22, 0.4) 0%, rgba(249, 115, 22, 0.1) 40%, transparent 70%); filter: blur(80px);"></div>
+    <div class="absolute top-1/4 right-0 w-[500px] h-[500px] rounded-full opacity-40" style="background: radial-gradient(circle, rgba(34, 211, 238, 0.3) 0%, transparent 60%); filter: blur(60px);"></div>
+    <div class="absolute inset-0 bg-[url('/images/grid.svg')] bg-center opacity-20" style="mask-image: linear-gradient(180deg, white, rgba(255,255,255,0));"></div>
   </div>
 
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
